# hdaw3

./: .gitignore  2.hdaw  AGENTS.md  CMakeLists.txt  DEV_PLAN_CPP.md  FEATURES.md  GEMINI.md  README.md  build-fast.bat  implementation_plan.md  opencode.json  package-lock.json
.opencode/plans/: 2026-06-10-clap-host-format.md  2026-06-10-clap-support.md
.zcode/plans/: plan-sess_0a377757-5127-49e9-bca4-a08abe37d930.md  plan-sess_568153bd-a062-484e-b6f7-1fe411456cdf.md  plan-sess_68028480-d79d-44c4-bb95-d5f3e1c91fc7.md  plan-sess_857a97ef-a8e5-4a84-a8b6-75b04b2ad052.md  plan-sess_e54c1908-6bfe-4917-ab57-0a74f548a61e.md
cmake/: AubioHelper.cmake
cmake/aubio-wrapper/: CMakeLists.txt
docs/: architecture.md  phase5.md  pitfalls-frontend.md  pitfalls-juce.md  realtime-safety.md  testing-mcp.md  valuetree-listener-contract.md
docs/superpowers/plans/: 2026-06-29-hdaw-mcp-server-phase1.md  2026-06-29-hdaw-mcp-server-phase2.md  2026-06-30-codebase-hardening-and-cleanup.md  2026-06-30-isolated-plugin-scanner.md  2026-06-30-plugin-process-isolation-plan.md  2026-06-30-warm-dark-visual-style.md  2026-07-03-modulation-system-implementation.md  2026-07-04-visual-style-refresh-plan.md  2026-07-09-full-automation-parameters-plan.md  2026-07-11-decouple-gui-from-engine.md  2026-07-13-file-browser-directory-persistence.md  2026-07-14-gui-engine-decoupling-completion.md  (+23 more)
frontend/: build.bat  electron-builder.yml  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/e2e/: app.spec.ts
frontend/electron/: main.ts  preload.ts
frontend/src/: App.css  App.tsx  electron.d.ts  main.tsx  rpc.ts  theme.ts
graphify-out/: .graphify_analysis.json  .graphify_labels.json  .graphify_labels.json.sig  .graphify_python  GRAPH_REPORT.md  add_edges.py  check_edges.py  find_audio.py  find_components.py  find_isolated.py  find_nodes.py
graphify-out/2026-07-23/: .graphify_analysis.json  .graphify_labels.json  cost.json  manifest.json
graphify-out/cache/: last_query_stamp  stat-index.json
src/: main.cpp  main_headless.cpp
src/common/: AudioGraphCommands.h  DebugLog.h  MidiService.h  PluginParamService.h  PluginService.h  ProjectCommands.h  ReadModel.h  SettingsKeys.h  TransportCommands.h  Version.h.in
src/engine/: AudioEngine.cpp  AudioEngine.h  AudioEngineCommands.cpp  AudioEngineCommands.h  AudioEngineCommands_Automation.cpp  AudioEngineCommands_Clips.cpp  AudioEngineCommands_Fx.cpp  AudioEngineCommands_GainEnvelope.cpp  AudioEngineCommands_GhostPaint.cpp  AudioEngineCommands_Helpers.h  AudioEngineCommands_Markers.cpp  AudioEngineCommands_Midi.cpp  AudioEngineCommands_Modulation.cpp  AudioEngineCommands_Slicing.cpp  AudioEngineCommands_Timestretch.cpp  AudioEngineCommands_Tracks.cpp  AudioEngineCommands_Transport.cpp  AudioEngineCommands_Undo.cpp  AudioImport.cpp  AudioImport.h  AudioPreviewPlayer.cpp  AudioPreviewPlayer.h  AudioRecorder.cpp  AudioRecorder.h  AutomationClipboard.cpp  AutomationClipboard.h  AutomationManager.h  BarSnap.cpp  BarSnap.h  BpmDetector.cpp  BpmDetector.h  BusProcessorBase.h  CLAPPluginEditor.cpp  CLAPPluginEditor.h  CLAPPluginFormat.cpp  CLAPPluginFormat.h  CLAPPluginInstance.cpp  CLAPPluginInstance.h  ClipClipboard.cpp  ClipClipboard.h  (+50 more)
src/frontend/: FrontendRouter.cpp  FrontendRouter.h  FrontendRpc.h  FrontendServer.cpp  FrontendServer.h  FrontendTreeWatcher.cpp  FrontendTreeWatcher.h  TreeDeltaAccumulator.cpp  TreeDeltaAccumulator.h  UiHttpServer.cpp  UiHttpServer.h
src/mcp/: McpExportTool.cpp  McpExportTool.h  McpGuiInspectTools.cpp  McpGuiInspectTools.h  McpJsonRpc.cpp  McpJsonRpc.h  McpSchema.cpp  McpSchema.h  McpServer.cpp  McpServer.h  McpToolDef.h  McpTools.cpp  McpTools.h  McpTools_Audio.cpp  McpTools_Private.h  McpTools_Project.cpp  McpTools_Transport.cpp  McpTransport.h  McpTransportHttp.cpp  McpTransportHttp.h  McpTransportLoopback.cpp  McpTransportLoopback.h  McpTransportStdio.cpp  McpTransportStdio.h
src/model/: ProjectModel.cpp  ProjectModel.h
src/proxy/: CrashDialog.h  PluginProxySlot.cpp  PluginProxySlot.h  ProxyCommon.h  ProxyEditor.cpp  ProxyEditor.h  ProxyPipe.cpp  ProxyPipe.h  ProxyProcessManager.cpp  ProxyProcessManager.h  ProxyRingBuffer.h  ProxySharedMemory.cpp  ProxySharedMemory.h
src/resources/: frontend.qrc  resources.qrc  resources.rc
src/ui/: AboutDialog.cpp  AboutDialog.h  AudioClipEditorWidget.cpp  AudioClipEditorWidget.h  AudioClipItem.cpp  AudioClipItem.h  AudioWaveformWidget.cpp  AudioWaveformWidget.h  AutomationLaneWidget.cpp  AutomationLaneWidget.h  CCLaneWidget.cpp  CCLaneWidget.h  ClipItem.cpp  ClipItem.h  DebugLog.h  ExportDialog.cpp  ExportDialog.h  FXChainWidget.cpp  FXChainWidget.h  FXSlotRow.cpp  FXSlotRow.h  GainEnvelopeEditor.cpp  GainEnvelopeEditor.h  GuiInspector.cpp  GuiInspector.h  LoopMarker.cpp  LoopMarker.h  MainWindow.cpp  MainWindow.h  MainWindowConnections.cpp  MainWindowMenus.cpp  MarkerItem.cpp  MarkerItem.h  MidiClipItem.cpp  MidiClipItem.h  MixerStripWidget.cpp  MixerStripWidget.h  MixerWidget.cpp  MixerWidget.h  ModulationWidget.cpp  (+47 more)
tests/: CMakeLists.txt  test_main.cpp
tests/integration/mcp/: gui_functionality_test.cpp  gui_inspect_test.cpp  mcp_functionality_test.cpp  mcp_server_test.cpp
tests/unit/common/: commands_test.cpp  read_model_test.cpp
tests/unit/engine/: bar_snap_test.cpp  bpm_detector_test.cpp  clip_source_processor_test.cpp  ghost_clips_test.cpp  isolated_scanner_test.cpp  markers_test.cpp  modulation_test.cpp  plugin_state_save_load_test.cpp  region_clipboard_test.cpp  stretch_test.cpp  track_fx_slot_debug_test.cpp  track_fx_slot_show_editor_test.cpp  transient_detector_test.cpp
tests/unit/frontend/: frontend_server_test.cpp  ghost_clips_rpc_test.cpp  tree_delta_accumulator_test.cpp
tests/unit/mcp/: dry_run_test.cpp  json_rpc_test.cpp  note_id_test.cpp  schema_test.cpp  tool_registry_test.cpp  transport_http_test.cpp  transport_stdio_test.cpp
tests/unit/model/: clip_slicing_test.cpp  project_model_test.cpp
tests/unit/proxy/: common_test.cpp  pipe_test.cpp  ring_buffer_test.cpp  shm_test.cpp
(+133 files in other folders)
